# Company-management

./: CMakeLists.txt  README.md  main.c
Libs/: Admin.c  Admin.h  Company.c  Company.h  Geral.c  Geral.h  Menus.c  Menus.h  constVariables.h  structs.h  user.c  user.h
